# flowchemdraw

./: .gitignore  .readthedocs.yml  LICENSE  README.md  __init__.py  pyproject.toml
docs/: conf.py  getting_started.md  index.md  json2md.py  json2yml.py
docs/development/additional/add_device/: example_explained.md  index.md
docs/development/foundations/: explanation-package.md  index.md
docs/development/foundations/code_structure/: flowchemdraw.module.rst  flowchemdraw.rst  flowchemgui.components.rst  flowchemgui.core.rst  flowchemgui.core_gui.rst  flowchemgui.gui.rst  flowchemgui.manager.rst  flowchemgui.rst  flowchemgui.utils.rst  modules.rst
src/flowchemdraw/: __init__.py  custom_listwidget.py  custom_qtreewidget.py  flowchem_draw.ui  gui_main.py  main.ui  mplwidget.py  mplwidget_components.py  qtreewidget_add_component_class.py  textbrowser_tolm.py  treewidget_device_class.py
src/flowchemdraw/components/: Dialogs_protocols.py  Edit_Setting_Files.ui  Edit_Setting_Window.py  __init__.py  custom_messagebox.py  temporary.toml  widget_draw_flowchart.py
src/flowchemdraw/drawgui/: flowchem_draw.ui  gui_main.py  mplwidget.py  mplwidget_components.py  qtreewidget_add_component_class.py  textbrowser_tolm.py  treewidget_device_class.py
src/flowchemdraw/figures/: Tverbinder.py  Xverbinder.py  __init__.py  __main__.py  bubblesensor.py  chromatography.py  erlenmeyer.py  flowmeter.py  flowreactor.py  heatexchanger.py  pressure_sensor.py  pump.py  spect.py  syringe.py  undefined.py  valve.py
src/flowchemdraw/manage/: __init__.py  component.py  connection.py  device_component.py  devices_config.toml  manage.py  manage_protocols.py  utensils.py
src/flowchemdraw/settinggui/: mplwidget_set.py  qtablewidget_protocols.py  setting_draw.ui  setting_gui.py  treewidget_protocols.py
src/flowchemdraw/utils/: constantes.py  devices_flowchem.py  drawclass.py  manage_class.py  math.py
(+20 files in other folders)
