[build-system]
requires = ["setuptools>64", "wheel", "pip>=22"]
build-backend = "setuptools.build_meta"

[project]
name = "flowchemdraw"
version = "0.0.1"
description = "Package to created a second layer to flowchem."
readme = "README.md"
requires-python = ">=3.10"
license =  { text = "MIT" }
keywords = ["control", "automation", "process"]
authors = [
    { name = "Samuel Vitor Saraiva", email = "samuel.saraiva@mpikg.mpg.de" }
]
maintainers = [
  { name = "Samuel Vitor Saraiva", email = "samuel.saraiva@mpikg.mpg.de" }
]
classifiers = [
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "flowchem",
    "pyqt5",
    "matplotlib",
    "toml",
    "numpy"
]

[project.optional-dependencies]
docs = ["furo",
    "mistune==0.8.4", # Due to sphinx-contrib/openapi#121
    "myst-parser",
    "sphinx",
    "sphinx_design",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
    "sphinxcontrib-openapi",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.poetry.dependencies]
myst-parser = "^0.15.2"  # Check for the latest version
sphinx_design = "^0.6.0"
sphinx-rtd-theme = "^1.3.0"